@@ -80,9 +80,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20.1</version>
 				<configuration>
-					<reuseForks>false</reuseForks>
-					<forkCount>2</forkCount>
-					<threadCount>4</threadCount>
+					<reuseForks>true</reuseForks>
+					<forkCount>1</forkCount>
+					<threadCount>10</threadCount>
 					<argLine>-Xmx512m -XX:MaxPermSize=256m 
 						-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager</argLine>
 					<excludes>
