@@ -1,5 +1,5 @@
 version 0.60.5
-11/07/2018
+12/07/2018
 	- Added service layer to the search controller (margaretha)
 	- Added OAuth2 scope checking in search and VC controllers (margaretha)
 	- Added handling OAuth2 bearer token for VC access and User group controllers (margaretha)
@@ -9,6 +9,8 @@ version 0.60.5
 	- Fixed empty scope in openID authorization and token service (margaretha)
 	- Implemented storing authorization code in cache (margaretha)
 	- Fixed authentication time in authentication controller (margaretha)
+	- Added OAuth2 access token tests (margaretha)
+	- Updated maven surefire setting for faster test suite runtime (margaretha)
 	
 version 0.60.4
 05/07/2018
